# ollaix

./: README.md  compose.prod.yml  compose.test.yml  compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: main.py  routes.py
src/controllers/: chat_controller.py
